# single-cell-curation

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  2to3.ipynb  CHANGELOG.md  CONTRIBUTING.md  Check SeuratObject Version.ipynb  Dockerfile  HCA-README.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  README.md.tmp  SECURITY.md  api_key.txt  codecov.yaml  docker-compose.yml  extract_perturbations_to_csv.py  ontology_bump_dry_run.py  pyproject.toml  readme.md  replaced-by.json  requirements-dev.txt  requirements.txt  run_mypy_and_annotate.py
cellxgene_schema_cli/: .coverage.66f0141.Evan-CZI-Laptop.local.32135.XeulyeFx  .coverage.cc0f17c.mac.lan.48318.XOKBDmax  CHANGELOG.md  LICENSE.txt  MANIFEST.in  Makefile  cellxgene_schema_definition.json  pyproject.toml  requirement-cog.txt  requirements.txt  setup.py
cellxgene_schema_cli/cellxgene_schema/: __init__.py  annotate_guides.py  atac_seq.py  cerberus_schema.json  cli.py  convert.py  convertion_template.py.j2  donor_updates.json  env.py  ex_cerberus.py  gencode.py  gene_symbol.py  map_species.py  matrix_utils.py  migrate.py  ontology.py  ontology_parser.py  ontology_processing.py  pydantic_gpt_and_me.py  reference_file_manager.py  remix.py  remove_labels.py  schema.py  title_donor_updates.json  try_pandera.py  utils.py  validate.py  write_labels.py
cellxgene_schema_cli/cellxgene_schema.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cellxgene_schema_cli/cellxgene_schema/gencode_files/: .gitignore  drosophila_melanogaster_diff.txt  gene_info.md  gene_info.yml  homo_sapiens_diff.txt  (+3 more)
cellxgene_schema_cli/scripts/: .gitignore  gene_download.sh  gene_processing.py  gtf_download.sh  gtf_processing.py  gtf_tools.py  ontology_processing.py  preprocess_gtf_for_annotation.py  readme.md  update_genes.py
cellxgene_schema_cli/tests/: __init__.py  conftest.py  test_annotate_guides.py  test_atac_seq.py  test_cerberus.py  test_check_duplicates.py  test_cli.py  test_gencode.py  test_gene_symbol.py  test_genetic_perturbations.py  test_map_species.py  test_migrate.py  test_ontology.py  test_reference_file_manager.py  test_remix.py  test_remove_labels.py  test_schema.py  test_schema_compliance.py  test_utils.py  test_validate.py
hca_schema_validator/: README.md  pyproject.toml
hca_schema_validator/tests/: test_validator.py
(+498 files in other folders)
