[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellxgene-schema"
version = "5.1.0"
description = "Tool for applying and validating cellxgene integration schema to single cell datasets"
authors = [
    { name = "Chan Zuckerberg Initiative", email = "cellxgene@chanzuckerberg.com" }
]
license = { text = "MIT" }
urls = { "Homepage" = "https://github.com/chanzuckerberg/single-cell-curation" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.dependencies]
anndata = "==0.8.0"
cellxgene-ontology-guide = "==0.4.0"
click = "==8.1.3"
Cython = "==0.29.34"
numpy = "==1.23.2"
pandas = "==1.4.4"
PyYaml = "==6.0"
scipy = "<1.13.0"    # scipy 1.13.0 is not compatible with anndata <=0.10.6, revisit before next release
semver = "==3.0.0"
xxhash = "==3.3.0"
matplotlib = "==3.7.3"


[project.optional-dependencies]
test = ["pytest", "pytest-cov",
    "coverage",
    "pytest",
    "mypy",
    "types-requests",
    "types-setuptools",
    "typing_extensions",
    "types-PyYAML",
]  # Add any additional test dependencies here

[project.scripts]
"cellxgene-schema" = "cellxgene_schema.cli:schema_cli"

[tool.setuptools.packages.find]
where = ["cellxgene_schema"]

[tool.setuptools.package-data]
"cellxgene_schema" = ["gencode_files/*gz", "schema_definitions/*yaml"]
